# cmake-project-base

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  sqr.cpp  sqr.h
test/: CMakeLists.txt  sqr_test.cpp
